added preferences in registration

--- a/GoDeliverFrontEnd/src/app/footer/footer.component.html
+++ b/GoDeliverFrontEnd/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <!-- Footer -->
-  <footer class="page-footer font-small footer-dark cyan darken-3 bg-dark fixed-bottom">
+  <footer class="page-footer font-small footer-dark cyan darken-3 bg-dark foot">
 
     
     <!-- Grid row-->
