--- a/GoDeliverFrontEnd/src/app/registration/registration.component.html
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.html
@@ -59,7 +59,9 @@
             <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
           </div>
         </div>
-        <!--form-group-->
+        <app-multiple-checkboxes (updatedList)="selectedPreferenceList($event)" [height]="150" [masterList]="preferences" [title]="'Select Genre'"
+ 	 [DisplayField]="'name'"></app-multiple-checkboxes>
+ 
 
         <!--form-group-->
         <div class="form-group">
