--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -11,7 +11,7 @@
     <!-- Links -->
     <ul class="navbar-nav pull-right col-xs-4">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home">Home</a>
+        <a class="nav-link" routerLink="">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/wishlist">Wishlist</a>
