--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -3,14 +3,16 @@
   <div class="container">
     <div class="row ">
       <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-        <div class="form-group">
-          <label for="Name">Name</label>
-          <input type="text" class="form-control" (ngModel)="model.Name" #Name="ngModel" [ngClass]="{'is-invalid':f.submitted && Name.invalid}"
-            name="Name" placeholder="Full Name" required />
-          <div class="invalid-feedback">
-            <div>Name is required</div>
-          </div>
-        </div>
+          <div class="form-group">
+              <label for="email">Email</label>
+              <input type="text" class="form-control" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{'is-invalid':f.submitted && email.invalid}"
+                placeholder="john@gmail.com" name="email" required [pattern]="emailPattern" email />
+              <div *ngIf="f.submitted && email.invalid" class="invalid-feedback">
+                <div *ngIf="email.errors.required">Email Name is required</div>
+                <div *ngIf="email.errors.email">Email must be a valid email Address</div>
+              </div>
+            </div>
+           
         <!--form-group-->
         <div class="form-group">
           <label for="password">Password</label>
