--- a/GoDeliverFrontEnd/src/app/footer/footer.component.html
+++ b/GoDeliverFrontEnd/src/app/footer/footer.component.html
@@ -4,11 +4,12 @@
   <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
 </head>
+
 <body>
   <!-- Footer -->
-  <footer class="page-footer font-small footer-dark cyan darken-3 bg-dark foot">
+  <footer class="page-footer font-small footer-dark cyan darken-5 bg-dark text-light foot">
 
-    
+
     <!-- Grid row-->
     <div class="row text-center">
 
@@ -47,13 +48,13 @@
     </div>
     <!-- Grid row-->
 
-  
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-1">© 2018 Copyright:
-    <a href="#"> GoDeliver.com</a>
-  </div>
-  <!-- Copyright -->
 
-</footer>
-<!-- Footer -->
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-1">© 2018 Copyright:
+      <a href="#"> GoDeliver.com</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
 </body>
