--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -4,32 +4,44 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="parallax">
-      <p class="goDel">Go Deliver</p>
-      <p class="tagline">Delivering happiness to home</p>
+    <div class="container">
+        <div class="parallax">
+            <p class="goDel">Go Deliver</p>
+            <p class="tagline">Delivering happiness to home</p>
+        </div>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+        book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
+        unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
+        more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. <br>
+        <app-recommendations></app-recommendations>
+
+        <div *ngIf="book">
+            <div class="row">
+                <div class="col-sm-4" *ngFor="let recommended of recommended_books; let i = index">
+                    <div *ngIf="i < 9">
+                        <div class="card mt-3 mb-3">
+                            <div class="card-header text-center">
+                                {{ recommended.title| date:'mediumDate' }}
+                            </div>
+                            <div class="card-body">
+                                <img class="card-img-top img-fluid" src="{{recommended.poster}}" alt="{{ recommended.original_title }}" style="height: 460px">
+                                <p class="text-center">{{ recommended.original_title }}</p>
+                                <a routerLink="/books/{{ recommended.id }}" href="#" class="btn btn-block btn-info">books
+                                    Details
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+
+
     </div>
-    <app-recommendations></app-recommendations>
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-    text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-    It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
-    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br> Lorem Ipsum is simply
-    dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since
-    the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
-    not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
-    in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-    software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and
-    typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-    took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also
-    the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
-    of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
-    including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-    has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-    it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-    Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-  </div>
+
 </body>
 
 </html>
