--- a/GoDeliverFrontEnd/src/app/registration/registration.component.html
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-
-
   <style>
     body {
+      margin: 0px;
       height: auto;
       background-color: #e3e3e3;
     }
@@ -13,7 +11,6 @@
 </head>
 
 <body>
-
 
   <!--container-->
   <div class="container">
@@ -70,7 +67,6 @@
       </form>
     </div>
   </div>
-  <br>
 </body>
 
 </html>
