--- a/GoDeliverFrontEnd/src/app/registration/registration.component.css
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.css
@@ -1,12 +1,11 @@
-
 *,
 *:before,
 *:after {
   box-sizing: border-box;
 }
 body {
-  margin:0px;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin: 0px;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 15px;
   color: black;
 }
@@ -14,7 +13,7 @@ h4 {
   color: #7ed321;
 }
 header {
-    margin-bottom:30px; 
+  margin-bottom: 30px;
 }
 input,
 input[type="radio"] + label,
@@ -175,9 +174,8 @@ select option {
 }
 .container {
   max-width: 38em;
-  padding: 1em 3em 2em 3em;
+  padding: 1em 3em 2em 13em;
   margin: 0em auto;
-  background-color: #fff;
   border-radius: 4.2px;
   box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
 }
@@ -214,11 +212,13 @@ select option {
     padding-right: 0;
   }
 }
-label{
-  color:black;
+label {
+  color: black;
 }
 [type="date"] {
-  background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
+  background: #fff
+    url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)
+    97% 50% no-repeat;
 }
 [type="date"]::-webkit-inner-spin-button {
   display: none;
@@ -226,9 +226,3 @@ label{
 [type="date"]::-webkit-calendar-picker-indicator {
   opacity: 0;
 }
-.bg-primary{
-  background-color: #2cb5b5 !important   /*background color of title*/
-}
-.card-box{
-  height: 150px;  /*div size of list //overflow scroll */
-} 
