--- a/GoDeliverFrontEnd/src/app/home/home.component.css
+++ b/GoDeliverFrontEnd/src/app/home/home.component.css
@@ -6,8 +6,8 @@
 }
 
 .goDel {
-  position: relative;
-  top: 20%;
+  position: absolute;
+  top: 34%;
   left: 70%;
   font-family: "Poppins";
   font-size: 3em;
@@ -15,9 +15,9 @@
 }
 
 .tagline {
-  position: relative;
-  top: 18%;
-  left: 63%;
+  position: absolute;
+  top: 40%;
+  left: 65%;
   font-family: "Poppins";
   font-size: 2em;
   color: #ad2929;
