--- a/GoDeliverFrontEnd/src/app/wishlist/wishlist.component.html
+++ b/GoDeliverFrontEnd/src/app/wishlist/wishlist.component.html
@@ -6,12 +6,21 @@
           {{ books.releaseYear | date:'mediumDate' }}
         </div>
         <div class="card-body">
-          <img class="card-img-top img-fluid" src="{{books.booksPoster}}" alt="{{ books.booksTitle }}" style="height: 460px">
-          <p class="text-center">{{ books.booksTitle }}</p>
-          <a routerLink="/books/{{ books.booksId }}" href="#" class="btn btn-block btn-info">Books Details</a>
-          <button (click)="delete(books.booksId)">Delete books from wishlist</button>
+          <img class="card-img-top img-fluid" src="{{books.poster}}" alt="{{ books.title }}" style="height: 280px">
+          <p class="text-center">{{ books.title }}</p>
+          <a routerLink="/books/{{ books.id }}" href="#" class="btn btn-block btn-info">Books Details</a>
+          <button (click)="delete(books.id)">Delete books from wishlist</button>
         </div>
       </div>
     </div>
   </div>
 </div>
+Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
+with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.    <br> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
+with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.    <br>
