--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -1,9 +1,50 @@
-<div class="container">
-    <div class="parallax">
-        <p class="goDel">Go Deliver</p>
-        <p class="tagline">Delivering happiness to home</p>
-    </div>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <style>
+        /* Make the image fully responsive */
+        .carousel-inner img {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+</head>
 
+<div id="demo" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="../../assets/topselling.jpeg" alt="Los Angeles">
+            <div class="carousel-caption">
+                <h3 style="top:20%">Top Selling</h3>
+                <p style="top:65%">Find the trending book of the decade!</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="../../assets/topselling.jpeg" alt="Chicago">
+            <div class="carousel-caption">
+                <h3>Chicago</h3>
+                <p>Thank you, Chicago!</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="../../assets/topselling.jpeg" alt="New York">
+            <div class="carousel-caption">
+                <h3>New York</h3>
+                <p>We love the Big Apple!</p>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
+</div>
+
+<div class="container">
     <app-recommendations></app-recommendations>
 
 </div>
