frontend components added

--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -1,26 +1,29 @@
-
 <div id="demo" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="../../assets/topselling.jpeg" alt="Los Angeles">
-            <div class="carousel-caption">
-                <h3 style="top:60%">Top Selling</h3>
-                <p style="top:65%">Find the trending book of the decade!</p>
-            </div>
+            <a routerLink="/login"><img src="../../assets/topselling.jpeg" alt="Los Angeles">
+                <div class="carousel-caption">
+                    <h3>Top Selling</h3>
+                    <p>Trending books of the decade!</p>
+                </div></a>
         </div>
         <div class="carousel-item">
-            <img src="../../assets/topselling.jpeg" alt="Chicago">
-            <div class="carousel-caption">
-                <h3>Chicago</h3>
-                <p>Thank you, Chicago!</p>
-            </div>
+            <a routerLink="/cart">
+                <img src="../../assets/topselling.jpeg" alt="Chicago">
+                <div class="carousel-caption">
+                    <h3>High Rating</h3>
+                    <p>Best books of the year</p>
+                </div>
+            </a>
         </div>
         <div class="carousel-item">
-            <img src="../../assets/topselling.jpeg" alt="New York">
-            <div class="carousel-caption">
-                <h3>New York</h3>
-                <p>We love the Big Apple!</p>
-            </div>
+            <a routerLink="/register">
+                <img src="../../assets/topselling.jpeg" alt="New York">
+                <div class="carousel-caption">
+                    <h3>Best Authors</h3>
+                    <p>Top authors of the decade</p>
+                </div>
+            </a>
         </div>
     </div>
     <a class="carousel-control-prev" href="#demo" data-slide="prev">
