card component added

--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="demo" class="carousel slide" data-ride="carousel">
+<div id="demo" class="carousel slide mb-4" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <a routerLink="/login"><img src="../../assets/topselling.jpeg" alt="Los Angeles">
