--- a/GoDeliverFrontEnd/src/app/recommendations/recommendations.component.html
+++ b/GoDeliverFrontEnd/src/app/recommendations/recommendations.component.html
@@ -1,37 +1,43 @@
 <div *ngIf="recommended_books">
+  <h2>Recommended Books</h2>
   <div class="col-sm-4" *ngFor="let book of recommended_books; let i = index">
-    <div *ngIf="i < 9">
-      <div *ngIf='i<3'>
-        <mat-card class="book-card">
-          <mat-card-header>
-            <div mat-card-avatar class="book-header-image"></div>
-            <mat-card-title>{{ book.title }}</mat-card-title>
-            <mat-card-subtitle>{{book.genre}}</mat-card-subtitle>
-          </mat-card-header>
-          <img mat-card-image src="{{ book.poster }}" height="200px" alt="Photo of a {{book.title}}">
-          <mat-card-actions>
-            <button routerLink="/wishlist" mat-button>LIKE</button>
-            <button routerLink="book/{{ book.bookISBN }}" mat-button>SHARE</button>
-          </mat-card-actions>
-        </mat-card>
-
-
-      </div>
-      <!--/.Carousel Wrapper-->
+    <div *ngIf='i<3'>
+      <app-cards [book]=book></app-cards>
     </div>
+
   </div>
 </div>
+<h2>Top Selling</h2>
+<div class="col-sm-4" *ngFor="let book of top_selling; let i = index">
+  <div *ngIf="i < 3">
+    <app-cards [book]=book></app-cards>
+  </div>
+</div>
+
 <div *ngIf="genres">
   <div class="col-sm-4" *ngFor="let gen of genres; let i = index">
-    <div *ngIf="i < 3">
-      <mat-card class="example-card">
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-content>{{ gen.genre }}</mat-card-content>
-          <mat-card-actions>
-            <button routerLink="/wishlist" mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
-          </mat-card-actions>
+    <div *ngIf='i<3'>
+      <mat-card class="book-card" style="height:350">
+
+        <img mat-card-image src="{{ book.poster }}" style="height: 200px; background-size: cover;" alt="Photo of a {{book.title}}">
+        <mat-card-header>
+          <span class="spacer"></span>
+          <div *ngIf=email>
+            <mat-icon class="example-icon"><a (click)="addToWishlist(book)">favorite</a></mat-icon>
+          </div>
+          <mat-card-title>{{ book.title }}</mat-card-title>
+          <mat-card-subtitle>{{book.genre}}</mat-card-subtitle>
+        </mat-card-header>
+
+        <mat-card-actions>
+          <span class="spacer"></span>
+          <button routerLink="/cart" mat-button>Add to cart</button>
+          <button routerLink="book/{{ book.bookISBN }}" mat-button>Details</button>
+        </mat-card-actions>
       </mat-card>
+
+
+      <!--/.Carousel Wrapper-->
     </div>
   </div>
 </div>
