--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<!-- <html>
+<html>
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
 
 <body>
 
-  <header>
+   <header>
     <nav class="navbar navbar-expand-sm bg-dark  navbar-dark">
 
       <a class="navbar-brand ml-5 col-xs-8 p-1" routerLink="">
@@ -54,12 +54,9 @@
           <a class="nav-link" routerLink="/cart">Cart</a>
         </li>
       </ul>
-    </nav>
-  </header>
-</body>
-
-</html> -->
-<div style="height: 100vh;">
+    </nav> 
+  
+<!-- <div style="height: 100vh;">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
       <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
@@ -69,7 +66,7 @@
       <span class="example-spacer"></span>
       <div fxShow="true" fxHide.lt-md="true">
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <a href="#" mat-button>
+          <!-- <a href="#" mat-button>
           <mat-icon>notifications</mat-icon>
           Notifications
         </a>
@@ -108,6 +105,9 @@
         </a>
       </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content fxFlexFill>Main content</mat-sidenav-content>
   </mat-sidenav-container>
-</div>
+</div>   -->
+</header>
+</body>
+
+</html>
