--- a/GoDeliverFrontEnd/src/app/book/book.component.html
+++ b/GoDeliverFrontEnd/src/app/book/book.component.html
@@ -15,7 +15,7 @@
               <div class="col-sm-7">
                 <ul class="list-group">
                   <li class="list-group-item">
-                    <strong>Book ISBN 10: </strong> {{ book.bookISBN }}
+                    <strong>Book ISBN 10: </strong> {{ book.bookISBN_10 }}
                   </li>
                   <li class="list-group-item">
                     <strong>Rating: </strong> {{ book.rating }}
