--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -9,19 +9,15 @@
 
 <body>
 
-   <header>
+  <header>
     <nav class="navbar navbar-expand-sm bg-dark  navbar-dark">
-
       <a class="navbar-brand ml-5 col-xs-8 p-1" routerLink="">
         <img src="assets/books.ico" alt="logo" style="width:40px;">
       </a>
-
-
-      <ul class="navbar-nav">
-
+      <ul class="navbar-nav" style="padding-left: 150px">
         <div *ngIf=noUser style="padding-top: 10px;">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login" href="#">Login Register</a>
+            <a class="nav-link" routerLink="/login" href="#">Login</a>
           </li>
         </div>
         <div *ngIf=curuser style="padding-top: 10px;">
@@ -30,84 +26,29 @@
               {{curuser[0]}}
             </a>
             <div class="dropdown-menu ">
-              <a class="dropdown-item" routerLink="/profile"href="#">User Profile</a>
+              <a class="dropdown-item" routerLink="/profile" href="#">User Profile</a>
               <a class="dropdown-item" routerLink="/wishlist" href="#">Wishlist</a>
               <a class="dropdown-item" routerLink="/orders">Orders</a>
               <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
           </li>
         </div>
-
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             More
           </a>
           <div class="dropdown-menu navbar-light">
             <a class="dropdown-item" routerLink="/servicepage">24x7 Customer Care</a>
-            <a class="dropdown-item" routerLink="/return" >Return Policy</a>
+            <a class="dropdown-item" routerLink="/return">Return Policy</a>
             <a class="dropdown-item" routerLink="/about">About Us</a>
           </div>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" routerLink="/cart">Cart</a>
         </li>
       </ul>
-    </nav> 
-  
-<!-- <div style="height: 100vh;">
-  <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>Responsive Navigation</span>
-      <span class="example-spacer"></span>
-      <div fxShow="true" fxHide.lt-md="true">
-        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-          <!-- <a href="#" mat-button>
-          <mat-icon>notifications</mat-icon>
-          Notifications
-        </a>
-        <a href="#" mat-button>
-          <mat-icon>message</mat-icon>
-          Messages
-        </a>
-        <a href="#" mat-button>
-          <mat-icon>account_box</mat-icon>
-          My Account
-        </a>
-      </div>
-    </mat-toolbar-row>
-  </mat-toolbar>
-
-  <mat-sidenav-container fxFlexFill>
-    <mat-sidenav #sidenav>
-      <mat-nav-list>
-        <a href="#" mat-list-item>
-          <mat-icon>notifications</mat-icon>
-          Notifications
-        </a>
-        <a href="#" mat-list-item>
-          <mat-icon>message</mat-icon>
-          Messages</a>
-        <a href="#" mat-list-item>
-          <mat-icon>account_box</mat-icon>
-          My Account
-        </a>
-        <a href="#" mat-list-item>
-          <mat-icon>lock</mat-icon>
-          My Account
-        </a>
-        <a (click)="sidenav.toggle()" mat-list-item>
-          <mat-icon>close</mat-icon> Close
-        </a>
-      </mat-nav-list>
-    </mat-sidenav>
-  </mat-sidenav-container>
-</div>   -->
-</header>
+    </nav>
+  </header>
 </body>
 
 </html>
