--- a/GoDeliverFrontEnd/src/app/header/header.component.css
+++ b/GoDeliverFrontEnd/src/app/header/header.component.css
@@ -5,4 +5,10 @@
   .example-spacer {
     flex: 1 1 auto;
   }
+.searchbar{
+    margin-right:20px;
+  }
+  .searchbutton{
+    padding-right:20px;
+  }
   
