--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -1,39 +1,71 @@
-<div id="demo" class="carousel slide mb-4" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <a routerLink="/login"><img src="../../assets/topselling.jpeg" alt="Los Angeles">
-                <div class="carousel-caption">
-                    <h3>Top Selling</h3>
-                    <p>Trending books of the decade!</p>
-                </div></a>
-        </div>
-        <div class="carousel-item">
-            <a routerLink="/cart">
-                <img src="../../assets/topselling.jpeg" alt="Chicago">
-                <div class="carousel-caption">
-                    <h3>High Rating</h3>
-                    <p>Best books of the year</p>
+<div class="row">
+    <div class="col-sm-10 mb-4" style="padding-left:200px">
+        <form>
+            <div class="row">
+                <div class="col-9">
+                    <input type="text" class="form-control text-center" placeholder="Search your favourite books here" name="search" [(ngModel)]="search">
                 </div>
-            </a>
-        </div>
-        <div class="carousel-item">
-            <a routerLink="/register">
-                <img src="../../assets/topselling.jpeg" alt="New York">
-                <div class="carousel-caption">
-                    <h3>Best Authors</h3>
-                    <p>Top authors of the decade</p>
+                <div class="col-3">
+                    <button class="btn-block btn-info form-control" (click)="searchBooks()">Search</button>
                 </div>
-            </a>
+            </div>
+        </form>
+    </div>
+</div>
+<div class="container">
+    <div *ngIf=books_result>
+        <h2>Search Result</h2>
+        <div class="row">
+            <div class="col-sm-4" *ngFor="let book of books_result; let i = index">
+                <br>
+                <div *ngIf='i < 9'>
+                    <app-cards [book]=book></app-cards>
+                </div>
+            </div>
         </div>
     </div>
-    <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </a>
 </div>
-
+<div *ngIf=check>
+    <div id="demo" class="carousel slide mb-4" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <a routerLink="/login"><img src="../../assets/topselling.jpeg" alt="Los Angeles">
+                    <div class="carousel-caption">
+                        <h3>Top Selling</h3>
+                        <p>Trending books of the decade!</p>
+                    </div></a>
+            </div>
+            <div class="carousel-item">
+                <a routerLink="/cart">
+                    <img src="../../assets/topselling.jpeg" alt="Chicago">
+                    <div class="carousel-caption">
+                        <h3>High Rating</h3>
+                        <p>Best books of the year</p>
+                    </div>
+                </a>
+            </div>
+            <div class="carousel-item">
+                <a routerLink="/register">
+                    <img src="../../assets/topselling.jpeg" alt="New York">
+                    <div class="carousel-caption">
+                        <h3>Best Authors</h3>
+                        <p>Top authors of the decade</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+    </div>
+</div>
 <div class="container">
     <app-recommendations></app-recommendations>
+
+    <div class="col-6 mt-5 center-block">
+        <button class="btn-block btn-info form-control" (click)="backToHome()">Back To Home</button>
+    </div>
 </div>
