--- a/GoDeliverFrontEnd/src/app/returnpolicy/returnpolicy.component.html
+++ b/GoDeliverFrontEnd/src/app/returnpolicy/returnpolicy.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="curUser">
-  Welcome {{curuser[0]}}
+<div *ngIf="curUser" class="container">
+  <h2>Welcome {{curuser[0]}}</h2>
 </div>
 <div class="container">
   <h2> Product Returns, Refund and Replacements</h2> Returns All products purchased on www.godeliver.in can be returned within
