--- a/GoDeliverFrontEnd/src/app/header/header.component.css
+++ b/GoDeliverFrontEnd/src/app/header/header.component.css
@@ -5,4 +5,9 @@
   .example-spacer {
     flex: 1 1 auto;
   }
-  
+  .searchbar{
+    margin:0 20px 0 0; 
+  }
+  .searchbutton{
+    padding:0 20px 0 0;
+  }
