--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -11,20 +11,25 @@
 
   <header>
     <nav class="navbar navbar-expand-sm bg-dark  navbar-dark">
+
       <a class="navbar-brand ml-5 col-xs-8 p-1" routerLink="">
         <img src="assets/books.ico" alt="logo" style="width:40px;">
       </a>
-      <ul class="navbar-nav" style="padding-left: 150px">
+
+
+      <ul class="navbar-nav" style="padding-right: 70px; padding-left:100px">
         <div *ngIf=noUser style="padding-top: 10px;">
           <li class="nav-item">
             <a class="nav-link" routerLink="/login" href="#">Login</a>
           </li>
         </div>
+
         <div *ngIf=curuser style="padding-top: 10px;">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
               {{curuser[0]}}
             </a>
+
             <div class="dropdown-menu ">
               <a class="dropdown-item" routerLink="/profile" href="#">User Profile</a>
               <a class="dropdown-item" routerLink="/wishlist" href="#">Wishlist</a>
@@ -32,7 +37,9 @@
               <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
           </li>
+
         </div>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             More
